posiGen_FullsendBox/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Greener_Dawn_Status__c</fullName>
        <label>Greener Dawn Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Contacting Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Reach Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Existing Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Had_Appointment_Eventually__c</fullName>
        <formula>IF(Initial_Appointment_Kept__c  || Rescheduled_Appt_Kept__c ||  Customer_File_Submitted__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This lead had an appointment, be it the original attempt or the final one.</inlineHelpText>
        <label>Had Appointment Eventually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heating_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Heating Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Utility</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Heating Provider)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_Electric_Bill_in_Past_12_Months__c</fullName>
        <label>Highest Electric Bill in Past 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Heating_Method__c</fullName>
        <label>Home Heating Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Water_Heater__c</fullName>
        <inlineHelpText>What type of hot water heater?</inlineHelpText>
        <label>Hot Water Heater</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Water_Heating_Method__c</fullName>
        <label>Hot Water Heating Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tankless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Referral_Specify_Source__c</fullName>
        <label>If Referral, Specify Source</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_shading_details__c</fullName>
        <description>Explanation of shading situation for home.</description>
        <label>If yes, shading details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Inbound Lead Image URL</description>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ImportBatch__c</fullName>
        <description>Batch note for bulk imports.  All records of same batch will have the same batch note.</description>
        <label>ImportBatch</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <description>External ID used in batch imports.  ID may be manually created prior to adding or may be machine-generated by external source</description>
        <externalId>true</externalId>
        <label>ImportID</label>
        <length>88</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <description>Incentives offered</description>
        <label>Customer Incentives</label>
        <picklist>
            <picklistValues>
                <fullName>3 months deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 months deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 months deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Infomercial_Type__c</fullName>
        <label>Infomercial Type</label>
        <picklist>
            <controllingField>Sub_Lead_Source__c</controllingField>
            <picklistValues>
                <fullName>Late Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daytime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Appointment_Kept__c</fullName>
        <formula>ISPICKVAL(Did_client_show__c, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Appointment Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installer_Notes__c</fullName>
        <label>Installer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intake_Questionnaire__c</fullName>
        <label>Intake Questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnect_Agreement__c</fullName>
        <label>Interconnect Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Feasible__c</fullName>
        <formula>ISPICKVAL( Status , &quot;Assessed- Feasible&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Feasible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portion_of_Roof_Facing_South_or_West__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portion of Roof Facing South or West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_PAge__c</fullName>
        <label>Landing PAge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age_Converted__c</fullName>
        <formula>ConvertedDate - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (Converted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>TODAY () -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment__c</fullName>
        <description>number for assignment rules</description>
        <label>Lead Assignment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_to_Flow_to_Accounts__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date to Flow to Accounts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Sheet__c</fullName>
        <label>Lead Sheet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_1__c</fullName>
        <label>Lead Source Detail 1</label>
        <picklist>
            <picklistValues>
                <fullName>News 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Referral_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Source Referral Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Referral Programs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Lead Source Referral Program)</relationshipLabel>
        <relationshipName>Leads_on_Referral_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Status_for_Opportunity_Reference__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status for Opportunity Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Source_Detail_2__c</fullName>
        <label>Lease Source Detail 2</label>
        <picklist>
            <picklistValues>
                <fullName>Morning News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Day News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Today Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBS This Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fox Morning News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Morning America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge Judy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeopardy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. Phil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <inlineHelpText>Signed by customer, but not fully executed on the spot.</inlineHelpText>
        <label>Lease</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Baton Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michoud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lock_Lead_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lower_Monthly_Lease_Payment_Amount_del__c</fullName>
        <inlineHelpText>How much will they pay per month during the discount period.</inlineHelpText>
        <label>Lower Monthly Lease Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lower_Monthly_Lease_Rate_Incentive_del__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>this is how many payment will be at the discounted rate provided as an Incentive to have them join</inlineHelpText>
        <label>Lower Monthly Lease Duration (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Modernize_Lead_ID__c</fullName>
        <label>Modernize Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Owner_Names__c</fullName>
        <inlineHelpText>Enter Additional Owner names, birthdates and social security numbers.</inlineHelpText>
        <label>Multiple Owner Name(s)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Owners__c</fullName>
        <inlineHelpText>Does the property have multiple owners?</inlineHelpText>
        <label>Multiple Owners?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Municipality is this property in?</inlineHelpText>
        <label>Municipality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads In This Municipality</relationshipLabel>
        <relationshipName>Leads_In_This_Municipality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN( Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   Phone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Names_on_Assessor_Page__c</fullName>
        <inlineHelpText>Verify that the name on the Assessor Page/Mortgage Deed matches the Applicant&apos;s name</inlineHelpText>
        <label>Name(s) on Assessor Page</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Agreement__c</fullName>
        <label>Net Meter Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_recommended_for_Gas_Are_you_sure__c</fullName>
        <inlineHelpText>Only relevant when someone has a gas hot water heater and is interested in a solar hot water heater.</inlineHelpText>
        <label>Not recommended for Gas - Are you sure?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <label># of Activities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Past_Due__c</fullName>
        <inlineHelpText>Answer if &quot;Are you past due on your electric bill?&quot; is checked.</inlineHelpText>
        <label>Number of Months Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Owners__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many units are in the building.</description>
        <label># of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numeric_ID_Copy_For_Conversion__c</fullName>
        <description>Duplicate the Lead Numeric ID value for propagation to more than one table on conversion.</description>
        <formula>Numeric_ID__c</formula>
        <label>Numeric ID Copy For Conversion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_ID__c</fullName>
        <externalId>true</externalId>
        <label>Numeric ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Open_CUR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Open Currently</description>
        <label>Open CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Opened this month</description>
        <label>Open MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Opened this Week</description>
        <label>Open WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <description>Lead is open to work</description>
        <inlineHelpText>New lead</inlineHelpText>
        <label>Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Keyword__c</fullName>
        <label>Original Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Search_Campaign__c</fullName>
        <label>Original Search Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Search_Type__c</fullName>
        <label>Original Search Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Referral_Source__c</fullName>
        <inlineHelpText>Only use this if the Referrer can not be found in the Referring Customer/Company fields.</inlineHelpText>
        <label>Other Referral Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Company__c</fullName>
        <label>Outside Company</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Greener Dawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear Compass Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joule Solar Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic Invasion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBM: Freedom Faith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBM: Operation Fuel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OverrideProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OverrideProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Own_Property_at_This_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own Property at this Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parish__c</fullName>
        <label>Parish</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_Notes__c</fullName>
        <label>Preferred Method Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Fetch_Error__c</fullName>
        <label>Proposal Fetch Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualified_for_Energy_Efficiency__c</fullName>
        <label>Qualified for Energy Efficiency?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_for_Solar_Hot_Water_Heater__c</fullName>
        <label>Qualified for Solar Hot Water Heater?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_for_Solar_Panels__c</fullName>
        <label>Qualified for Solar Panels?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Past_Due__c</fullName>
        <inlineHelpText>Fill in if &quot;Are you past due on your electric bill?&quot; is checked</inlineHelpText>
        <label>Reason for Past Due</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Information_Completed__c</fullName>
        <formula>IF( OR(NOT(ISPICKVAL(LeadSource,&quot;Referral&quot;)),AND(ISPICKVAL( LeadSource , &quot;Referral&quot;), Referral_Program_Complete__c )), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Information Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Program_Complete__c</fullName>
        <formula>IF ( AND( ISBLANK(Referrer_Source_Notes__c ), ISBLANK(Lead_Source_Referral_Program__c)), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Program Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Program__c</fullName>
        <formula>Referral__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <inlineHelpText>Was this a single referral or was the person referred at a party / group event</inlineHelpText>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HistoricData</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Referral</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By_Ambassador_id__c</fullName>
        <label>Referred By Ambassador id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_First_Name__c</fullName>
        <label>Referrer First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Last_Name__c</fullName>
        <label>Referrer Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referrer_Source_Notes__c</fullName>
        <label>Referrer Source Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <formula>Referral__r.Referrer__r.FirstName  &amp; &quot; &quot; &amp;  Referral__r.Referrer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Ambassador_Community_Partner__c</fullName>
        <formula>Ambassador__Referred_By_Ambassador__r.Community_Partnership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Ambassador Community Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referring_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Customer/Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads Referred</relationshipLabel>
        <relationshipName>Leads_Referred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads_Referred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Lead that referred this Lead. This field should only be used in the event that the referrer could not be found in the Referring Customer/Company field.</inlineHelpText>
        <label>Referring Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads Referred In</relationshipLabel>
        <relationshipName>Leads_Referred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_URL__c</fullName>
        <label>Referring URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rescheduled_Appt_Date__c</fullName>
        <inlineHelpText>Enter date for the appointment if rescheduled.</inlineHelpText>
        <label>Rescheduled Appt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rescheduled_Appt_Kept__c</fullName>
        <formula>ISPICKVAL( Client_show_for_Reschedule__c , &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rescheduled Appt Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residence_Type__c</fullName>
        <label>Residence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stand-Alone House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condominum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Assesment_Assigned__c</fullName>
        <formula>NOT(ISNULL( Roof_Assessor_Assigned_Date__c )) ||   Roof_Assessment_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roof Assesment Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Assessment_Complete_Date__c</fullName>
        <label>Roof Assessment Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roof_Assessment_Complete__c</fullName>
        <formula>NOT(ISNULL(Roof_Assessment_Complete_Date__c)) ||  ISPICKVAL(Status,&quot;Assessed- Feasible&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roof Assessment Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Assessment_Not_Feasible_Reason__c</fullName>
        <label>Roof Assessment Not Feasible Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roof_Assessor_Assigned_Date__c</fullName>
        <label>Roof Assessor Assigned Date</label>
        <type>Date</type>
    </fields>
</CustomObject>